--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -532,6 +532,9 @@
   }
 }
 @layer base {
+  html, body {
+    scroll-behavior: smooth;
+  }
   body {
     background-color: var(--color-brand-gray);
     font-family: var(--font-inter);
